--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Noto+Serif&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700|Noto+Serif|Roboto&display=swap');
 
 /* Header */
 .main-header{
@@ -133,4 +133,271 @@
 
 .main-header-item a{
   text-decoration: none;
+}
+
+
+/* HOME */
+
+
+/* Ads section */
+
+.top-ads{
+  top:104px;
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  width: 970px;
+  height: 50px;
+  background-color: #d0d0d0;
+}
+
+.billboard{
+  
+  width: 970px;
+  height: 250px;
+  background-color: #d0d0d0;
+  margin-top: 80px;
+}
+
+.title-section{
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 22px;
+  color: #000;
+}
+
+.sub-title-section{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0 30px 0;
+}
+
+.sub-title-section p{
+  font-family: 'Roboto';
+  font-size: 20px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #9b9b9b;
+}
+
+.home-content-section1{
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.editor-choice-list{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 0 60px 0;
+  width: 100%;
+  flex-flow: wrap;
+}
+
+.product-editor-container{
+  background-color: #fff;
+  width: 100%;
+  word-break: break-word;
+}
+
+.editor-card{
+  display: flex;
+  flex-flow: row;
+  margin: 0 0 -15px 16px;
+  z-index: 1;
+}
+
+.editor-img{
+  width: 60px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  border-radius: 50%;
+  flex-shrink: 0;
+  margin: 0 12px 0 0;
+  border: 0.5px solid #e0e0e0;
+  background: #fff
+}
+
+.editor-name{
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  color: #4a4a4a;
+  margin: 0 ;
+}
+
+.editor-position{
+  font-family: 'Roboto';
+  font-size: 12px;
+  color: #9b9b9b;
+  margin: 5px 0 0 0;
+}
+
+.product-card-editor{
+  width: 198px;
+  padding: 16px;
+  background-color: #fff;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  word-break: break-word;
+  display: flex;
+  flex-flow: column;
+  min-height: 315px;
+}
+
+.product-card-editor-img{
+  width: 140px;
+  height: 177px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-x: auto;
+  flex-shrink: 0;
+  margin: 0 auto;
+}
+
+.product-card-editor-detail{
+  display: flex;
+  align-items: flex-start;
+  flex-flow: column;
+}
+
+.product-card-editor-rating{
+  padding-top: 12px;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  align-items: baseline;
+}
+
+.product-card-editor-rating-average{
+  font-family: 'Roboto';
+  font-size: 14px;
+  color: #000000;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.product-card-editor-rating-total{
+  margin-left: 10px;
+  font-family: 'Roboto';
+  font-size: 14px;
+  color: #000;
+}
+
+.product-card-editor-brand{
+  font-family: 'Roboto';
+  font-size: 16px;
+  color:#000000;
+  cursor: pointer;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin: 15px 0 0 0;
+  display: -webkit-box;
+  white-space: normal;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.product-card-editor-detail a:hover{
+  color: #db284e;
+  transition-duration: 0.4s;
+}
+
+.product-card-editor-title{
+  font-family: 'Roboto';
+font-size: 16px;
+color:#000000;
+cursor: pointer;
+text-decoration: none;
+margin: 5px 0 0 0;
+display: -webkit-box;
+white-space: normal;
+-webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+overflow: hidden;
+}
+
+
+.product-card-editor-shade{
+  padding-top: 2px;
+  font-family: 'Roboto';
+  font-size: 16px;
+  color:#9b9b9b;
+  margin: 5px 0 0 0;
+  display: -webkit-box;
+  white-space: normal;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+
+/* Banner */
+
+.banner-background{
+  background-image: url('https://s3-ap-southeast-1.amazonaws.com/assets.femaledaily.com/web-assets/banner_matches_visitor.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 405px;
+  width: 100%;
+  margin: 0 0 60px 0;
+}
+
+.banner-section{
+  width: 1140px;
+  height: 405px;
+  margin: 0 auto;
+  display: flex;
+  flex-flow: row;
+}
+
+.banner-container{
+  width: 300px;
+  flex-shrink: 0;
+  display: flex;
+  flex-flow: column;
+  align-items: baseline;
+  margin: 40px 0 0 135px;
+  padding: 0;
+}
+
+.banner-title{
+  font-family: 'Roboto';
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.banner-desc{
+  font-family: 'Roboto';
+  font-size: 20px;
+  font-weight: 400;
+  margin: 15px 0 0 0;
+  padding: 0;
+}
+
+.banner-btn{
+  margin: 30px 0 0 0;
+  align-self: flex-end;
+  height: 45px;
+  width: 190px;
+  border-radius: 4px;
+  border: solid 1px#db284e;
+  background-color:#db284e;
+  font-family: 'Roboto';
+  font-size: 16px;
+  color:#fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
